--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Hackathon Game</title>
 
-    <link href="Content/Style/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="Content/Style/bootstrap.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="Content/Style/style.css">
     <link rel="stylesheet" type="text/css" href="Content/Style/animate.css">
 </head>
@@ -19,7 +19,7 @@
         </div>
 
         <div id="GameArea">
-            game area <div class="animated_div">test</div>
+            game area
         </div>
 
         <div id="ConsoleArea">
