scott 3 - fixed animation

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h2>Lern 2 Kode</h2>
         </div>
 
-        <div class="SidePanel">
+        <div id="SidePanel">
             Side Panel
         </div>
 
