scott 5 - updated styles

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
 
         <div id="SidePanel">
             <p style="color: #ffffff;font-size:xx-large;"> > </p>
+            <div id="SidePanelContent">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Information</div>
+                    <div class="panel-body">
+                        Info 1 
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div id="GameArea">
