--- a/index.html
+++ b/index.html
@@ -26,17 +26,19 @@
         <div id="SidePanel">
             <p style="color: #ffffff;font-size:xx-large;"> > </p>
             <div id="SidePanelContent">
+                <a href="https://twitter.com/intent/tweet?button_hashtag=Hackathon&text=I%20just%20tried%20the%20game%20by%20JustDevIt" class="twitter-hashtag-button">Tweet #Hackathon</a>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 <div class="panel panel-default">
                     <div class="panel-heading">Information</div>
                     <div class="panel-body">
-                        Info 1 
+                        information
                     </div>
                 </div>
             </div>
         </div>
 
         <div id="GameArea">
-            game area
+            Game area
         </div>
 
         <div id="ConsoleArea">
