Committing merged files
Committing the manually merged files

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hackathon Game</title>
 
+    <link rel="icon" href="../../favicon.ico">
     <link href="Content/Style/bootstrap.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="Content/Style/style.css">
     <link rel="stylesheet" type="text/css" href="Content/Style/animate.css">
