Adding Player.js and Object.js
placing my player.js and object.js into the master branch

--- a/Game/test.html
+++ b/Game/test.html
@@ -11,14 +11,14 @@
     <title>Starter Template for Bootstrap</title>
 </head>
 <body>
-    <canvas id="game">
+    <canvas id="main">
 
     </canvas>
 
 <script>
-    var player = {
+    //var player = {};
 
-    };
+	var player = new Player(0,0,50,80);
 </script>
 </body>
 </html>
