committing so that alex can grab the project

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="Content/Style/bootstrap.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="Content/Style/style.css">
     <link rel="stylesheet" type="text/css" href="Content/Style/animate.css">
+
+
+
 </head>
 <body>
     <div id="container">
@@ -42,6 +45,7 @@
 
         <div id="GameArea">
             Game area
+            <canvas id="game"></canvas>
         </div>
 
         <div id="ConsoleArea">
@@ -68,6 +72,12 @@
         </div>
 
     </div>
+
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="Game/player.js"></script>
+    <script src="Game/game.js"></script>
+    <script src="Game/gameObject.js"></script>
+    <script src="Game/Object.js"></script>
 
 
 
