Removed errors that were everywhere after taking Neal and Alex's code and putting it together.

--- a/Game/test.html
+++ b/Game/test.html
@@ -10,7 +10,7 @@
 
     <script src="game.js"></script>
     <script src="player.js"></script>
-    <script src="Object.js"></script>
+    <script src="gameObject.js"></script>
 
 
     <title>Starter Template for Bootstrap</title>
