--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="Game/player.js"></script>
     <script src="Game/game.js"></script>
     <script src="Game/gameObject.js"></script>
-    <script src="Game/Object.js"></script>
+    <script src="Game/player.js"></script>
+    <script src="Game/gameObject.js"></script>
 
 
 
