Removed errors that were everywhere after taking Neal and Alex's code and putting it together.

--- a/index.html
+++ b/index.html
@@ -73,11 +73,20 @@
 
     </div>
 
+    <script type="text/javascript">
+
+        var canvas = document.getElementById('game');
+        var context = canvas.getContext('2d');
+
+        var spritesheet = new Image();
+        spritesheet.src = "./img/spritesheet.png";
+
+
+    </script>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="Game/game.js"></script>
     <script src="Game/gameObject.js"></script>
     <script src="Game/player.js"></script>
-    <script src="Game/gameObject.js"></script>
+    <script src="Game/game.js"></script>
 
 
 
