--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,11 @@
 
 <input type="button" id="submitButton" value="Submit"/>
 
+<ul id="functionList"></ul>
+    <input type="button" id="btnGrabFunctions" value="Grab Functions" />
+
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/main.js"></script>
 </body>
