added list area for console

--- a/index.html
+++ b/index.html
@@ -59,7 +59,18 @@
                 </div>
             </div>
             <div class="ConsolePane">
-                Console  >_
+                <div id="ConsoleExpand">
+                    <p style="color: #ffffff;font-size:large;margin-left: 2%;"> Methods </p>
+                    <ul class="list-group" style="width:95%;margin-left: 2%">
+                        <li class="list-group-item">item</li>
+                        <li class="list-group-item">item</li>
+                        <li class="list-group-item">item</li>
+                        <li class="list-group-item">item</li>
+                        <li class="list-group-item">item</li>
+                    </ul>
+                </div>
+
+
             </div>
         </div>
 
