synced up with neil's stuff, made some fixes to the collision detecting, added call to server on/fail and added variable for user function waiting

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 
         var canvas = document.getElementById('game');
         var context = canvas.getContext('2d');
+        var doneMoving = true;
 
         var spritesheet = new Image();
         spritesheet.src = "./img/spritesheet.png";
